--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -487,7 +487,9 @@ label {
   
   
 }
-
+#emptyDivFR {
+  background-image: url('../img/noFR.png');
+}
 #modalFooter{
   padding: auto;
   margin: 10px;
