--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -157,7 +157,7 @@ label {
   height:38px;
   border-radius: 19px;
   margin-right: 5px;
-  background-image: url("../img/camera.png");
+  background-image: url("img/camera.png");
   background-size: 25px 25px;
   background-repeat: no-repeat;
   background-position: center;
@@ -172,7 +172,7 @@ label {
   height:38px;
   border-radius: 19px;
   margin-right: 5px;
-  background-image: url("../img/camera.png");
+  background-image: url("img/camera.png");
   background-size: 25px 25px;
   background-repeat: no-repeat;
   background-position: center;
@@ -196,7 +196,7 @@ label {
   height:38px;
   border-radius: 19px;
   margin-right: 5px;
-  background-image: url("../img/camera.png");
+  background-image: url("img/camera.png");
   background-size: 25px 25px;
   background-repeat: no-repeat;
   background-position: center;
@@ -244,7 +244,7 @@ label {
   height:50px;
   margin:25px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -271,7 +271,7 @@ label {
   height:100px;
   margin:auto;
   border-radius: 50px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -381,7 +381,7 @@ label {
   height:50px;
   margin:5px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -393,7 +393,7 @@ label {
   margin-right: 10px;
   vertical-align: middle;
   border-radius: 20px;
-  background-image: url('../img/google.jpg');
+  background-image: url('img/google.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -418,11 +418,11 @@ label {
   color: lightgrey;
 }
 #menu-toggle {
-  background-image: url('../img/menu.png');
+  background-image: url('img/menu.png');
 }
 
 #btnSignOut {
-  background-image: url('../img/logout.png');
+  background-image: url('img/logout.png');
 }
 
 #btnSend{
@@ -459,7 +459,7 @@ label {
   height:50px;
   margin:8px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   
@@ -488,7 +488,7 @@ label {
   
 }
 #emptyDivFR {
-  background-image: url('../img/noFR.png');
+  background-image: url('img/noFR.png');
 }
 #modalFooter{
   padding: auto;
@@ -521,7 +521,7 @@ input[type="file"] {
     height:50px;
     margin:auto;
     border-radius: 25px;
-    background-image: url('../img/userPhoto.jpg');
+    background-image: url('img/userPhoto.jpg');
     background-size: cover;
     background-position: center;
     
