--- a/css/chatroom.css
+++ b/css/chatroom.css
@@ -244,7 +244,7 @@ label {
   height:50px;
   margin:25px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -271,7 +271,7 @@ label {
   height:100px;
   margin:auto;
   border-radius: 50px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -381,7 +381,7 @@ label {
   height:50px;
   margin:5px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   background-color:rgba(255, 255, 255, 0);
@@ -459,7 +459,7 @@ label {
   height:50px;
   margin:8px;
   border-radius: 25px;
-  background-image: url('../img/userPhoto.jpg');
+  background-image: url('img/userPhoto.jpg');
   background-size: cover;
   background-position: center;
   
@@ -519,7 +519,7 @@ input[type="file"] {
     height:50px;
     margin:auto;
     border-radius: 25px;
-    background-image: url('../img/userPhoto.jpg');
+    background-image: url('img/userPhoto.jpg');
     background-size: cover;
     background-position: center;
     
